[gd_scene load_steps=19 format=2]

[ext_resource path="res://textures/journal ui/metaphysical_screen.png" type="Texture" id=1]
[ext_resource path="res://scripts/equipment_manager.gd" type="Script" id=2]
[ext_resource path="res://objects/equipment_inv_tile.tscn" type="PackedScene" id=3]
[ext_resource path="res://textures/mobius_eel.png" type="Texture" id=4]
[ext_resource path="res://textures/journal ui/equipment_bg.png" type="Texture" id=5]
[ext_resource path="res://objects/journal_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://themes/journal_button_disabled.tres" type="StyleBox" id=7]
[ext_resource path="res://scripts/equipment_buttons.gd" type="Script" id=8]
[ext_resource path="res://fonts/Inkcalig.otf" type="DynamicFontData" id=9]
[ext_resource path="res://scripts/stickynotes.gd" type="Script" id=10]
[ext_resource path="res://textures/journal ui/stickynote_inventory_hover.png" type="Texture" id=11]
[ext_resource path="res://textures/journal ui/stickynote_pedia_hover.png" type="Texture" id=12]
[ext_resource path="res://textures/journal ui/stickynote_ritual_hover.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=8]
size = 70
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
size = 61
extra_spacing_bottom = -25
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=9]
size = 95
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=11]
size = 35
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=10]
size = 50
font_data = ExtResource( 9 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="translucent_bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.192157, 0.192157, 0.192157, 0.533333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 5 )

[node name="equipment label" type="RichTextLabel" parent="."]
margin_left = 184.0
margin_top = 488.0
margin_right = 520.0
margin_bottom = 568.0
rect_scale = Vector2( 0.95, 0.95 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 8 )
text = "Equipment:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equipped label" type="RichTextLabel" parent="."]
margin_left = 336.0
margin_top = 176.0
margin_right = 672.0
margin_bottom = 316.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]Item 
Equipped:[/center]"
text = "Item 
Equipped:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inv_tile_button1" parent="." instance=ExtResource( 3 )]
margin_left = 184.0
margin_top = 563.0
margin_right = 384.0
margin_bottom = 763.0
rect_scale = Vector2( 0.95, 0.95 )
start_focused = true

[node name="inv_tile_button2" parent="." instance=ExtResource( 3 )]
margin_left = 408.0
margin_top = 563.0
margin_right = 608.0
margin_bottom = 763.0
rect_scale = Vector2( 0.95, 0.95 )

[node name="inv_tile_button3" parent="." instance=ExtResource( 3 )]
margin_left = 632.0
margin_top = 563.0
margin_right = 832.0
margin_bottom = 763.0
rect_scale = Vector2( 0.95, 0.95 )

[node name="inv_tile_button4" parent="." instance=ExtResource( 3 )]
margin_left = 184.0
margin_top = 787.0
margin_right = 384.0
margin_bottom = 987.0
rect_scale = Vector2( 0.95, 0.95 )

[node name="inv_tile_button5" parent="." instance=ExtResource( 3 )]
margin_left = 408.0
margin_top = 787.0
margin_right = 608.0
margin_bottom = 987.0
rect_scale = Vector2( 0.95, 0.95 )

[node name="inv_tile_button6" parent="." instance=ExtResource( 3 )]
margin_left = 632.0
margin_top = 787.0
margin_right = 832.0
margin_bottom = 987.0
rect_scale = Vector2( 0.95, 0.95 )

[node name="inv_tile_button7" parent="." instance=ExtResource( 3 )]
margin_left = 400.0
margin_top = 284.0
margin_right = 600.0
margin_bottom = 484.0

[node name="item_desc_bg" type="Sprite" parent="."]
modulate = Color( 0.858824, 0.858824, 0.858824, 1 )
position = Vector2( 1400, 625 )
scale = Vector2( 1, 1.05 )
texture = ExtResource( 1 )

[node name="item_name" type="RichTextLabel" parent="item_desc_bg"]
anchor_left = 0.113
anchor_right = 0.921
anchor_bottom = 0.154
margin_left = -339.891
margin_top = -380.0
margin_right = -333.443
margin_bottom = -385.984
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]ITEM/FISH NAME"
text = "ITEM/FISH NAME"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_sprite" type="Sprite" parent="item_desc_bg"]
position = Vector2( -10, -140 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="flavor_text" type="RichTextLabel" parent="item_desc_bg"]
margin_left = -330.0
margin_top = 90.0
margin_right = 328.0
margin_bottom = 228.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 11 )
text = "this it the item description of the selected item. This very creepy/weird looking fish is scary, and it came from the deep!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equip_button" parent="item_desc_bg" instance=ExtResource( 6 )]
margin_left = -83.0151
margin_top = 240.65
margin_right = -434.835
margin_bottom = 297.65
custom_fonts/font = SubResource( 10 )
custom_styles/disabled = ExtResource( 7 )
text = "EQUIP"
script = ExtResource( 8 )

[node name="Inventory_stickynote" type="TextureButton" parent="."]
margin_left = 175.0
margin_top = 9.0
margin_right = 492.0
margin_bottom = 236.0
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
texture_focused = ExtResource( 11 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
ref_path = "res://scenes/Inventory.tscn"

[node name="Research_stickynote" type="TextureButton" parent="."]
margin_left = 539.0
margin_top = 15.0
margin_right = 854.0
margin_bottom = 226.0
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
texture_focused = ExtResource( 12 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
ref_path = "res://scenes/Research.tscn"

[node name="Rituals_stickynote" type="TextureButton" parent="."]
margin_left = 1423.0
margin_top = 1.0
margin_right = 1743.0
margin_bottom = 220.0
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )
texture_focused = ExtResource( 13 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
ref_path = "res://scenes/Rituals.tscn"
